Next version of webfile

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>Hello Friend</title>
     </head>
     <body>
-        <h1>F Society, Evil Corp!!!</h1>
+        <h1>F Society, Evil Corp!!! I am learning web development and it is really exciting</h1>
     </body>
 </html>
